--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -5,19 +5,23 @@ Author: Your Name
 Developer @GA in NYC
 */
 
-
 /******************************************
 /* SETUP
 /*******************************************/
 
 /* Box Model Hack */
+
 * {
-  -moz-box-sizing: border-box; /* Firexfox */
-  -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
-  box-sizing: border-box; /* IE */
+  -moz-box-sizing: border-box;
+  /* Firexfox */
+  -webkit-box-sizing: border-box;
+  /* Safari/Chrome/iOS/Android */
+  box-sizing: border-box;
+  /* IE */
 }
 
 /* Clear fix hack */
+
 .clearfix:after {
   content: ".";
   display: block;
@@ -33,12 +37,14 @@ Developer @GA in NYC
 
 .alignright {
   float: right;
-  padding: 0 0 10px 10px; /* note the padding around a right floated image */
+  padding: 0 0 10px 10px;
+  /* note the padding around a right floated image */
 }
 
 .alignleft {
   float: left;
-  padding: 0 10px 10px 0; /* note the padding around a left floated image */
+  padding: 0 10px 10px 0;
+  /* note the padding around a left floated image */
 }
 
 /******************************************
@@ -53,21 +59,23 @@ body {
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   font-weight: 300;
 }
+
 a {
   text-decoration: none;
 }
-
 
 /******************************************
 /* LAYOUT
 /*******************************************/
 
 /* Center the container */
+
 .container {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
 }
+
 .logo {
   font-size: 48px;
   font-weight: 800;
@@ -78,6 +86,7 @@ header {
   padding: 25px 0;
   overflow: hidden;
 }
+
 header .logo {
   color: #fff;
   float: left;
@@ -87,11 +96,13 @@ header nav {
   float: right;
   margin-top: 15px;
 }
+
 header nav ul li {
   display: inline-block;
   margin: 0 0 0 40px;
   font-size: 24px;
 }
+
 header nav ul li a {
   color: #f9e42e;
 }
@@ -105,6 +116,7 @@ header nav ul li a {
 #hero .logo {
   color: #fff;
 }
+
 #hero h2 {
   font-size: 48px;
   text-align: center;
@@ -112,6 +124,7 @@ header nav ul li a {
   margin: 120px 0 90px;
   font-weight: 600;
 }
+
 .button {
   border-radius: 5px;
   font-weight: 800;
@@ -122,36 +135,45 @@ header nav ul li a {
   display: block;
   margin: 0 auto;
 }
+
 .yellow {
   background: #f9e42e;
   color: #033048;
 }
+
 .blue {
   background: #033048;
   color: #fff;
   font-size: 24px;
 }
+
 #benefits {
   padding: 100px 0 80px;
 }
+
 h3 {
   color: #033048;
   font-size: 40px;
   font-weight: 600;
   margin-bottom: 40px;
 }
-#benefits p, #benefits ul {
+
+#benefits p,
+#benefits ul {
   width: 600px;
 }
+
 #benefits ul {
   list-style: disc;
   margin: 30px 0 0 80px;
 }
+
 #testimonial {
   background: url(../images/testimonial_bg.jpg) no-repeat top center #071324;
   padding: 70px 0 70px;
   color: #fff;
 }
+
 blockquote {
   font-size: 36px;
   font-weight: 300;
@@ -160,36 +182,43 @@ blockquote {
   width: 75%;
   margin: 0 auto;
 }
+
 blockquote span {
   font-weight: 600;
   display: block;
   font-style: normal;
 }
+
 #main {
   margin-top: 80px;
 }
+
 #posts {
   width: 73%;
   display: inline-block;
   margin-right: 1.95%;
   vertical-align: top;
 }
+
 #sidebar {
   width: 25%;
   display: inline-block;
   vertical-align: top;
 }
+
 .post {
   border-bottom: 1px solid #043049;
   padding-bottom: 40px;
   margin-bottom: 40px;
 }
+
 .post h2 {
   font-weight: 600;
   font-size: 40px;
   line-height: 1.3;
   margin-bottom: 30px;
 }
+
 .post h2 a {
   color: #043049;
 }
@@ -197,11 +226,13 @@ blockquote span {
 .post img {
   margin-bottom: 30px;
 }
+
 .post p {
   font-size: 24px;
   line-height: 1.333;
   color: #606161;
 }
+
 .post p:first-of-type:first-letter {
   float: left;
   font-size: 80px;
@@ -211,10 +242,12 @@ blockquote span {
   padding-left: 3px;
   font-weight: 600;
 }
+
 .readmore {
   text-align: right;
   margin-top: 30px;
 }
+
 .readmore a {
   color: #043049;
   font-weight: 600;
@@ -246,18 +279,22 @@ blockquote span {
   margin-bottom: 15px;
   color: #043049;
 }
+
 #sidebar ul {
   margin-bottom: 40px;
 }
+
 #sidebar ul li a {
   color: #043049;
   font-size: 24px;
 }
+
 #sidebar p {
   font-size: 22px;
   line-height: 1.1;
   margin-bottom: 40px;
 }
+
 #sidebar p a {
   color: #043049;
   font-weight: 600;
@@ -274,20 +311,24 @@ footer {
   padding: 65px 0 45px;
   text-align: center;
 }
+
 footer .logo {
   color: #f9e42e;
   margin-bottom: 68px;
 }
+
 footer ul li {
   display: inline-block;
   list-style: none;
   margin: 0 26px 75px;
 }
+
 footer p {
   font-size: 18px;
   color: #fff;
   font-weight: 600;
 }
+
 #contact {
   width: 70%;
 }
@@ -322,7 +363,8 @@ footer p {
   #benefits {
     padding: 30px 0;
   }
-  #benefits p, #benefits ul {
+  #benefits p,
+  #benefits ul {
     width: 82%;
     margin: 0 auto 20px;
   }
@@ -333,10 +375,12 @@ footer p {
   #main {
     margin-top: 25px;
   }
-  footer .logo, footer ul li {
+  footer .logo,
+  footer ul li {
     margin-bottom: 30px;
   }
-  #posts, #sidebar {
+  #posts,
+  #sidebar {
     margin: 0 auto;
     width: 95%;
     display: block;
@@ -361,7 +405,8 @@ footer p {
   #sidebar h3 {
     font-size: 24px;
   }
-  #sidebar ul li a, #sidebar p {
+  #sidebar ul li a,
+  #sidebar p {
     font-size: 18px;
   }
   #sidebar img {
@@ -369,4 +414,108 @@ footer p {
   }
 }
 
+/*****************************************/
 
+.labeling, #long {
+  display: block;
+  float: left;
+  width: 100%;
+  padding: 7px;
+}
+
+.two-col {
+  overflow: hidden;
+  /* Makes this div contain its floats */
+  margin: 10%;
+}
+
+.two-col {
+  width: 100%;
+}
+.col1 {
+  width: 30%;
+}
+#long {
+  width: 150% !important;
+}
+.col2 {
+  width: 60%;
+  
+}
+
+.two-col .col1 {
+  float: left;
+}
+
+.two-col .col2 {
+  float: right;
+}
+
+.two-col label {
+  display: block;
+}
+
+.textFields {
+  align-content: space-around;
+  height: 20px;
+  overflow: hidden;
+}
+
+
+
+
+input[type=text] {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
+  height: 50px;
+  line-height: 50px;
+  font-size: 25px;
+}
+
+input:focus {
+  outline: none;
+}
+
+input[type=password] {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid #000000;
+  height: 50px;
+  line-height: 50px;
+  font-size: 25px;
+}
+input::placeholder {
+  opacity: .3;
+}
+
+input[type=radio] {
+  font-size: 20px;
+}
+
+.form-check {
+ display: inline-flex;
+}
+
+.testRotate{
+  -moz-transition: transform .5s;
+  -webkit-transition: transform .5s;
+  transition: transform .5s;
+}
+
+.testRotate:hover{
+  transform: rotate(360deg);
+  -moz-transform: rotate(350deg);
+  -webkit-transform: rotate(360deg);
+}
+.form-check-label {
+  width: 300% !important;            
+}
+button {
+  font-size: 1.3em;
+  color: white;
+  background-color: #033048;
+  margin: 0 0 40px 70px;
+  padding: 10px 55px 10px 55px;
+  border-radius: 10px;
+}
